gcc/testsuite/gm2/iso/fail/simpleforward.mod
MODULE simpleforward ;


PROCEDURE foo ; FORWARD ;

PROCEDURE foo (c: CARDINAL) ;
BEGIN
END foo ;

BEGIN
   foo (1)
END simpleforward.
